# corporate-harbinger

./: .editorconfig  .gitignore  Cargo.toml  README.md  corporate_harbinger.yaml.dist  flake.nix  init.sql
.github/: CONTRIBUTING.md
src/: lib.rs  main.rs
src/changes_detector/: mod.rs
src/client/: discord.rs  ldap.rs  mod.rs  sqlite.rs
src/collector/: ldap_client.rs  mod.rs  workforce_provider.rs
src/models/: mod.rs
src/notifier/: mod.rs
src/notify/: discord.rs  dryrun_notify.rs  mod.rs  notify.rs
src/provider/: mod.rs
src/repository/: dryrun_workforce_save_repository.rs  mod.rs  save_repository.rs  sqlite.rs  workforce_read_repository.rs  workforce_save_repository.rs
