[package]
name = "corporate-harbinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
env_logger = "0.11.2"
ldap3 = "0.11.3"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
